--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,8 +20,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bg-pokemon-pattern {
+/* .bg-pokemon-pattern {
   background: url('/pokeball.jpg');
   background-size: 16rem;
   background-color: #f7f7f7;
-}
+} */
